# formal-math-benchmark

./: .gitignore  README.md  pyproject.toml
data/: problems.json  sample_runs.json
docs/: methodology.md
lean/: FormalMathBenchmark.lean  lake-manifest.json  lakefile.lean
lean/FormalMathBenchmark/: Examples.lean  Generated.lean
scripts/: generate_readme_figures.py  run_demo.py
src/formal_math_benchmark/: __init__.py  dataset.py  evaluation.py  lean_generator.py  models.py  openai_runner.py  reporting.py
tests/: test_evaluation.py
